<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_sms_inbox"
        android:title="@string/action_sms_inbox"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_add_expense"
        android:title="@string/action_add_expense"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_trips"
        android:title="@string/label_trips"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_import_statement"
        android:title="@string/action_import_statement"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_pdf_inbox"
        android:title="@string/action_pdf_inbox"
        android:showAsAction="never" />
</menu>
